--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@thirdweb-dev/sdk": "^4.0.7",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
