--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@thirdweb-dev/sdk": "^4.0.7",
+    "@types/validator": "^13.11.5",
     "ethers": "^5.7.2",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
