--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.16.4",
     "magic-sdk": "^21.2.0",
     "next": "13.5.6",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "validator": "^13.11.0"
