--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "framer-motion": "^10.16.4",
     "magic-sdk": "^21.2.0",
     "next": "13.5.6",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.6.1",
     "react": "^18",
     "react-dom": "^18",
     "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
