--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@magic-sdk/admin": "^2.0.1",
+    "@thirdweb-dev/chains": "^0.1.55",
     "@thirdweb-dev/sdk": "^4.0.7",
     "@types/validator": "^13.11.5",
     "@upstash/redis": "^1.24.0",
