--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.6.1",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.4",
     "validator": "^13.11.0"
   },
   "devDependencies": {
