--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "node-fetch": "^2.6.1",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.4",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "swr": "^2.2.4",
     "validator": "^13.11.0"
   },
   "devDependencies": {
